# eafcc-core

./: .gitignore  Cargo.toml  README.md  cbindgen.toml  eafcc.h
benches/: simple_query.rs
bindings/go/: eafcc.go  eafcc.h  go_callback_headers.go
src/: error.rs  ffi.rs  lib.rs
src/cfg_center/: cfg_center.rs  cfgindex.rs  config_path_spliter.rs  differ.rs  loader.rs  mem_store.rs  mod.rs  namespace.rs  querier.rs
src/model/: link.rs  mod.rs  object.rs  res.rs  rule.rs
src/parser/: rule.rs
src/rule_engine/: mod.rs
src/storage_backends/: mod.rs
src/storage_backends/filesystem/: mod.rs
src/storage_backends/git/: mod.rs
src/storage_backends/git/p2p/: custom_backend_demo.rs  mod.rs
test/mock_data/filesystem_backend/links/foo/: link_bar.json
test/mock_data/filesystem_backend/reses/foo/bar/: 1.json
test/mock_data/filesystem_backend/rules/foo/bar/: 1.json
test/mock_data/filesystem_backend/v1/links/: link_root.json
test/mock_data/filesystem_backend/v1/links/foo/: link_bar.json
test/mock_data/filesystem_backend/v1/reses/foo/bar/: 1.json
test/mock_data/filesystem_backend/v1/rules/foo/bar/: 2.json
test/mock_data/filesystem_backend/v2/reses/foo/bar/: 1.json
