[package]
name = "eafcc"
version = "0.1.0"
authors = ["myrfy001 <myrfy001@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
nom = "6.2.1"
unescape = "0.1.0"
libc = "0.2"

[profile.release]
debug = true

[profile.test]
opt-level = 3
debug = 2
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'    # This setting is always ignored.
incremental = true
codegen-units = 256
rpath = false