[package]
name = "eafcc"
version = "0.1.0"
authors = ["myrfy001 <myrfy001@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
nom = "6.2.1"
unescape = "0.1.0"
libc = "0.2"
notify = "4.0.17"
git2 = "0.13.22"
libgit2-sys = { version = "0.12.23" } # should make the version match the git2 lib, the libgit2-sys used by git2 can be read from git2's source code
parking_lot = "0.11.2"
libp2p = "0.39.1"

[profile.release]
debug = true

[profile.test]
opt-level = 0
debug = true
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'    # This setting is always ignored.
incremental = true
codegen-units = 256
rpath = false